<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context="msc.unical.it.mrhush.Activities.HabitCreatorActivity">

        <TextView
            android:id="@+id/savedHabitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="22dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/habitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/habitName"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:visibility="visible"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="34dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dip"
            android:text="@string/filtersList"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spinnerFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/listOfFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_filters"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/selectedFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="34dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dip"
            android:text="@string/chooseAction"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spinnerAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="34dp"
            android:layout_marginTop="10dip"
            android:text="Select priority:"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"/>


    </LinearLayout>

    <Button
        android:id="@+id/confirmHabitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/saveHabit"
        android:textColor="@android:color/white"
        android:visibility="visible" />

</RelativeLayout>