<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="msc.unical.it.mrhush.Activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pleaselogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:text="Please Login with your\nGoogle Account\nto save your preferences\n"
        android:textSize="24dp" />

    <ImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/todo"
        android:visibility="gone"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/logout"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableLeft="@mipmap/g_icon"
        android:text="Logout"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:visibility="gone">

    </Button>


    <Button
        android:id="@+id/GoToMyHabits"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text="@string/show_my_habits"
        android:visibility="gone" />

    <Button
        android:id="@+id/settings"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:text="@string/settings"
        android:visibility="gone" />


</LinearLayout>
